adding portfolio stylesheet.css

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-                                /* test*/
+                                /* Index.html stylesheet*/
                                 
                                 a {
                                     color: #777777;
